# sleepy

./: CMakeLists.txt  INSTALL  README  README.md  ROADMAP  autoindent  update-translations.sh  wscript
data/: CMakeLists.txt  sleepy.desktop.in  sleepy.desktop.template.in
debian/: changelog  control  copyright  rules
include/: config.h  config.h.cmake
po/: CMakeLists.txt  POTFILES.in  TRANSLATORS_NOTE  gen-po.sh  gen-po.sh.in  gen-pot.sh  gen-pot.sh.in  gen-pot.sh.in~  sleepy.pot  untitled.pot  update-po.sh  update-po.sh.in  update-translations.sh  vi.po  vi.po~
src/: CMakeLists.txt  Makefile.am~  main.vala  sleeptimer.vala  trayicon.vala  utility.vala  wizard.vala
vapi/: config.vapi
